--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,9 +12,4 @@ spring:
     pathmatch:
       matching-strategy: path_pattern_parser
 
-springdoc:
-  consumes-to-match: application/json, application/xml
-  produces-to-match: application/json, application/xml
-  swagger-ui:
-    path: /swagger-ui.html
-    disable-swagger-default-url: true
+spring.main.allow-bean-definition-overriding: true
